--- a/public/partials/login.html
+++ b/public/partials/login.html
@@ -33,5 +33,5 @@
     </div>
   </form>
   <!-- signup button -->
-  <a ng-click="main.changeInclude('session-signup')">new to wasd.it? <span>signup</span></a>
+  <a ng-click="main.changeInclude('signup')">new to wasd.it? <span>signup</span></a>
 </div>  <!-- /.session-login -->
