--- a/public/partials/signup.html
+++ b/public/partials/signup.html
@@ -34,5 +34,5 @@
     <button type="submit" class="btn btn-primary">signup</button>
   </form>
   <!-- login button -->
-  <a ng-click="main.changeInclude('session-login')">already have an account? <span>login</span></a>
+  <a ng-click="main.changeInclude('login')">already have an account? <span>login</span></a>
 </div> <!-- /.session-signup -->
