--- a/public/partials/game-view.html
+++ b/public/partials/game-view.html
@@ -1,50 +1,69 @@
 <!-- game view(all) section -->
-<div class="game-view-all" id="game-view-all">
-  <div>
-    <h1>game view(all)</h1>
-  </div>
-  <!-- all gamess -->
-  <ul>
-    <li ng-repeat="games in main.allGames">
-      <div ng-click="(main.indexOfShow === $index) ? main.indexOfShow = null : main.indexOfShow = $index">
-        {{games.title}}
+<div class="game-view session" id="game-view">
+  <div class="game-view-background"></div>
+  <div class="container">
+    <div class="row justify-content-center">
+      <h1>games list</h1>
+    </div>
+    <!-- <div ng-repeat="games in main.allGames" class="row align-items-center"> -->
+    <div ng-repeat="games in main.allGames" class="row cards" role="dialog" data-toggle="modal" data-target="#game{{$index}}">
+      <div class="col-md col-md-5 hv">
+        <img ng-src="{{games.image}}" alt="image of {{games.name}}" class="rounded">
       </div>
-      <!-- view/show section
-      hidden until view button is clicked -->
-      <div>
-        <!-- view/show form -->
-        <div ng-if="$index === main.indexOfShow">
-          <!-- title -->
-          <p>game title: {{games.title}}</p>
-          <!-- release date -->
-          <p>release year: {{games.releaseYear}}</p>
-          <!-- genre -->
-          <p>genre: {{games.genre}}</p>
-          <!-- image -->
-          <img ng-src="{{games.image}}" alt="image of {{games.name}}">
-          <!-- description -->
-          <p>description: {{games.description}}</p>
-          <!-- display comments -->
-          <p>comments:
-            <ul>
-              <li ng-repeat="comments in games.comments track by $index">{{comments}}</li>
-            </ul>
-          </p>
+      <div class="col-md col-md-7">
+        <h1>{{games.title}}</h1>
+        <p>genre: {{games.genre}}</p>
+        <p>release year: {{games.releaseYear}}</p>
+      </div>
+      <!-- modal content -->
+      <div class="modal fade this-modal" id="game{{$index}}" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+          <div class="modal-content">
+            <!-- modal header -->
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <i class="fas fa-times"></i>
+              </button>
+              <h1 class="modal-title" id="exampleModalLongTitle">{{games.title}}</h1>
+              <p>genre: {{games.genre}}</p>
+              <p>release year: {{games.releaseYear}}</p>
+            </div>
+            <!-- modal body -->
+            <div class="modal-body">
+              <h4>{{games.description}}</h4>
 
-          <!-- if there is a signed in user, show add comment form -->
-          <div ng-if="main.currentUser">
-            <form ng-submit="main.updateGameComment(games)">
-              <input name="username" ng-model="main.currentUser" placeholder="{{main.currentUser}}" type="text" readonly>
-              <textarea ng-model="main.createForm.comments" type="text" placeholder="add new comment" required></textarea>
-              <!-- submit button -->
-              <button type="submit">submit</button>
-            </form>
-          </div>
-          <!-- close/collapse button
-          closes view/show container when selected -->
-          <button ng-click="(main.indexOfShow === $index) ? main.indexOfShow = null : main.indexOfShow = $index">close</button>
+              <!-- if there is a signed in user, show add comment form -->
+              <div ng-if="main.currentUser">
+                <form ng-submit="main.updateGameComment(games)">
+                  <input name="username" ng-model="main.currentUser" placeholder="{{main.currentUser}}" type="text" readonly>
+                  <textarea ng-model="main.createForm.comments" type="text" placeholder="add new comment" required></textarea>
+                  <!-- submit button -->
+                  <!-- <button type="submit">submit</button> -->
+                  <!-- modal footer -->
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                  </div>
+                </form>
+              </div>
+
+              <h5>comments:</h5>
+                <ul>
+                  <li ng-repeat="comments in games.comments track by $index">
+                    <div class="row">
+                      <div class="col-md col-md-4">
+                        {{main.currentUser}}
+                      </div>
+                      <div class="col-md col-md-8">
+                        {{comments}}
+                        </div>
+                    </div>
+                  </li>
+                </ul>
+            </div> <!-- /.modal-body -->
+          </div> <!-- /.modal-content -->
         </div>
-      </div> <!-- end of view/show section -->
-    </li>
-  </ul>
+      </div> <!-- /modal end -->
+    </div> <!-- /ng-repeat -->
+  </div>
+  <a>hello, world!</a>
 </div> <!-- /.game-view-all -->
