--- a/public/partials/profile.html
+++ b/public/partials/profile.html
@@ -1,5 +1,5 @@
-<!-- user view -->
-<div class="user-view" id="user-view">
+<!-- profile -->
+<div class="profile" id="profile">
   <div>
     <h1>user profile page</h1>
   </div>
@@ -104,4 +104,4 @@
       </div> <!-- end of view/show section -->
     </li>
   </ul>
-</div> <!-- /.user-view -->
+</div> <!-- /.profile -->
