--- a/public/partials/login.html
+++ b/public/partials/login.html
@@ -1,5 +1,6 @@
 <!-- user log in section -->
 <div class="session" id="session-login">
+  <div class="game-view-background"></div>
   <h1>login</h1>
   <form ng-submit="main.login()" class="px-5 py-5">
     <div class="form-row login-hidden-row">
