--- a/public/partials/profile.html
+++ b/public/partials/profile.html
@@ -1,5 +1,6 @@
 <!-- profile -->
 <div class="profile" id="profile">
+  <div class="game-view-background"></div>
   <div>
     <h1>user profile page</h1>
   </div>
