--- a/public/partials/about.html
+++ b/public/partials/about.html
@@ -1,6 +1,7 @@
 <div class="about" id="about">
   <div class="container">
     <div class="row justify-content-center">
+    <div class="game-view-background"></div>
       <h1>about us</h1>
     </div>
     <div class="about-p row align-items-center">
