--- a/public/partials/contact.html
+++ b/public/partials/contact.html
@@ -1,5 +1,6 @@
 <!-- contact -->
 <div class="contact session" id="contact">
+  <div class="game-view-background"></div>
   <h1>contact us</h1>
   <form ng-submit="main.signup()" class="px-5 py-5">
     <div class="form-row">
