added style to profile.html

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -36,6 +36,19 @@ html {
 body {
   background: var(--night);
   font-family: 'IBM Plex Sans', sans-serif;
+  /* Found on CSS-TRICKS
+  https://css-tricks.com/snippets/css/prevent-long-urls-from-breaking-out-of-container/ */
+  /* These are technically the same, but use both */
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  -ms-word-break: break-all;
+  /* Instead use this non-standard one: */
+  word-break: break-word;
+  /* Adds a hyphen where the word breaks, if supported (No Blink) */
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
 }
 
 a {
@@ -70,7 +83,8 @@ styles applied to multi
 
 .about > .container > .row > h1, .game-view > .container > .row > h1, .session > h1 {
   position: relative;
-  margin: 2.2em 0 2.4em 0;
+  margin: 2.2em 0.3em 2.4em;
+  text-align: center;
 }
 
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -228,15 +242,7 @@ button.btn.btn-primary:hover {
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 game view(all)
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
-.game-view {
-  /* background: var(--slate);
-  color: var(--dull);
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center; */
-}
-
+/* .game-view {} */
 
 .game-view-background {
   height: 500%;
@@ -306,6 +312,19 @@ game view(all)
 
 .game-view > .container > .row > .col-md-7 > .row > h1 {
   cursor: pointer;
+  /* Found on CSS-TRICKS
+  https://css-tricks.com/snippets/css/prevent-long-urls-from-breaking-out-of-container/ */
+  /* These are technically the same, but use both */
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  -ms-word-break: break-all;
+  /* Instead use this non-standard one: */
+  word-break: break-word;
+  /* Adds a hyphen where the word breaks, if supported (No Blink) */
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
 }
 
 .game-view > .container > .row > .col-md-7 > .row > p {
@@ -339,6 +358,9 @@ game view(all)
   justify-content: center;
 }
 
+.game-view-comments > div > form {
+  margin-bottom: 18px;
+}
 .fa-minus {
   color: var(--energy);
   font-size: 1.7em;
@@ -352,9 +374,9 @@ game view(all)
   margin-bottom: 15px;
 }
 
-.game-view-user-comments:nth-child(odd) {
+.game-view-user-comments:nth-child(even) {
   width: calc(100% - 30px);
-  background: var(--dull);
+  background: rgba(197, 198, 199, 0.2);
 }
 
 .game-view-user-comments > .col-md > p {
@@ -383,6 +405,38 @@ game view(all)
   margin-bottom: 0.2em;
 }
 
+.modal-title {
+  /* Found on CSS-TRICKS
+  https://css-tricks.com/snippets/css/prevent-long-urls-from-breaking-out-of-container/ */
+  /* These are technically the same, but use both */
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  -ms-word-break: break-all;
+  /* Instead use this non-standard one: */
+  word-break: break-word;
+  /* Adds a hyphen where the word breaks, if supported (No Blink) */
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
+}
+
+.modal-body {
+  /* Found on CSS-TRICKS
+  https://css-tricks.com/snippets/css/prevent-long-urls-from-breaking-out-of-container/ */
+  /* These are technically the same, but use both */
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  -ms-word-break: break-all;
+  /* Instead use this non-standard one: */
+  word-break: break-word;
+  /* Adds a hyphen where the word breaks, if supported (No Blink) */
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
+}
+
 .fa-times {
   color: var(--energy);
   font-size: 1.3em;
@@ -391,26 +445,29 @@ game view(all)
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 game view(single)
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
-/* .game-view {
-  background: rgb(246, 247, 189);
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-} */
+/* .game-view {} */
 
 
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 user profile
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
-.profile {
-  background: rgb(255, 223, 254);
-  align-items: center;
+/* .profile {} */
+
+.edit-delete-button > .col-md {
+  padding: 0;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
+.fa-edit, .fa-trash-alt {
+  color: var(--stain);
+  font-size: 2.3em;
+}
+
+.fa-trash-alt {
+  color: firebrick;
+}
 
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 game add/create
@@ -431,8 +488,14 @@ game edit
   justify-content: center;
 }
 
+.form-title {
+  text-align: center;
+}
+
 .edit-success {
+  background: var(--night);
   color: var(--energy);
+  text-align: center;
 }
 
 
