--- a/public/partials/contact.html
+++ b/public/partials/contact.html
@@ -1,7 +1,7 @@
 <!-- contact -->
 <div class="contact session" id="contact">
   <div class="game-view-background"></div>
-  <h1>contact us</h1>
+  <h1>Contact Us</h1>
   <form ng-submit="main.signup()" class="px-5 py-5">
     <div class="form-row">
       <!-- first name -->
