--- a/public/partials/create.html
+++ b/public/partials/create.html
@@ -1,7 +1,7 @@
 <!-- game add -->
 <div class="game-create session" id="game-create">
   <div class="game-view-background"></div>
-  <h1>add game</h1>
+  <h1>Add Game</h1>
   <form ng-submit="main.create()" class="px-5 py-5">
     <div ng-if="main.errorMessage === true" class="session-error">That game already exists.</div>
     <!-- username -->
