--- a/public/partials/login.html
+++ b/public/partials/login.html
@@ -1,7 +1,7 @@
 <!-- user log in section -->
 <div class="session" id="session-login">
   <div class="game-view-background"></div>
-  <h1>login</h1>
+  <h1>Login</h1>
   <form ng-submit="main.login()" class="px-5 py-5">
     <div class="form-row login-hidden-row">
       <div class="form-group col-md-6">
