--- a/public/partials/about.html
+++ b/public/partials/about.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row justify-content-center">
     <div class="game-view-background"></div>
-      <h1>about us</h1>
+      <h1>About Us</h1>
     </div>
     <div class="about-p row align-items-center">
       <div class="col-md col-md-6 offset-md-3">
