--- a/public/partials/game-view.html
+++ b/public/partials/game-view.html
@@ -32,7 +32,8 @@
 
         <!-- if there is a signed in user, show add comment form -->
         <div ng-if="main.currentUser">
-          <form ng-submit="main.updateGameComment(games)">
+          <form ng-submit="main.updateGameComment(games)" class="px-5 py-5">
+            <h3 class="form-title">Add Comment</h3>
             <div class="form-group">
               <label for="username">username</label>
               <input class="form-control" name="username" ng-model="main.currentUser" placeholder="{{main.currentUser}}" type="text" readonly>
@@ -45,7 +46,9 @@
           </form>
         </div>
 
-        <div class="row game-view-user-comments" ng-repeat="comments in games.comments track by $index">
+        <!-- order comments by newest -->
+        <div class="row game-view-user-comments" ng-repeat="comments in games.comments | orderBy:'+':true track by $index">
+        <!-- <div class="row game-view-user-comments" ng-repeat="comments in games.comments track by $index"> -->
           <div class="col-md col-md-12">
             <p>{{comments}}</p>
           </div>
