--- a/public/partials/header.html
+++ b/public/partials/header.html
@@ -11,23 +11,23 @@
     <div class="carousel-inner">
       <!-- image 1 -->
       <div class="carousel-item active">
-        <img class="d-block w-100" src="/assets/csgo.png" alt="First slide">
+        <img class="d-block w-100" src="/assets/skyrim.jpg" alt="First slide">
       </div>
       <!-- image 2 -->
       <div class="carousel-item">
-        <img class="d-block w-100" src="/assets/fortnite.jpg" alt="Second slide">
+        <img class="d-block w-100" src="/assets/super-mario.jpg" alt="Second slide">
       </div>
       <!-- image 3 -->
       <div class="carousel-item">
-        <img class="d-block w-100" src="/assets/roblox.jpg" alt="Third slide">
+        <img class="d-block w-100" src="/assets/fortnite.jpg" alt="Third slide">
       </div>
       <!-- image 4 -->
       <div class="carousel-item">
-        <img class="d-block w-100" src="/assets/skyrim.jpg" alt="Fourth slide">
+        <img class="d-block w-100" src="/assets/roblox.jpg" alt="Fourth slide">
       </div>
       <!-- image 5 -->
       <div class="carousel-item">
-        <img class="d-block w-100" src="/assets/super-mario.jpg" alt="Fith slide">
+        <img class="d-block w-100" src="/assets/csgo.png" alt="Fith slide">
       </div>
     </div>
     <!-- left controller -->
