--- a/public/partials/signup.html
+++ b/public/partials/signup.html
@@ -1,7 +1,7 @@
 <!-- user sign up -->
 <div class="session" id="session-signup">
   <div class="game-view-background"></div>
-  <h1>signup</h1>
+  <h1>Signup</h1>
   <form ng-submit="main.signup()" class="px-5 py-5">
     <div ng-if="main.errorMessage === true" class="session-error">That username already exists.</div>
     <div class="form-row">
